--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,13 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>World's Best Lasagna</title>
 </head>
 
 <body>
 
-    <h1>Lasagna</h1>
+    <h1>World's Best Lasagna</h1>
+    <img
+        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Feaf2a87ca2376e9dca53110c86de9d30%2F167347559762620230110_193320.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
+    <h2>Description</h2>
+    <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and garlic</li>
+        <li>Tomato</li>
+        <li>Sugar</li>
+        <li>Spices and seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Cheese</li>
+        <li>Egg</li>
+    </ul>
 
+    <h2>Steps</h2>
+    <ol>
+        <li>Make the meat sauce</li>
+        <li>Cook the noodles</li>
+        <li>Make the ricotta mixture</li>
+        <li>Layer the lasagna according to the recipe instructions</li>
+        <li>Cover with foil and bake</li>
+        <li>Let the lasagna rest before serving</li>
+    </ol>
 </body>
 
 </html>
