Finished Guacamole recipe page

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -5,36 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World's Best Lasagna</title>
+    <title>Guacamole</title>
 </head>
 
 <body>
 
-    <h1>World's Best Lasagna</h1>
+    <h1>Guacamole</h1>
     <img
-        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Feaf2a87ca2376e9dca53110c86de9d30%2F167347559762620230110_193320.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
+        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Ff01a6bf647c432ca47e3977e74d19a34%2F1658799469F39A3812-D358-48B3-A09E-DF33F063FBAA.jpeg&q=60&c=sc&orient=true&poi=auto&h=512">
     <h2>Description</h2>
-    <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+    <p>This guacamole recipe gets a tasty kick from cayenne and cilantro. You can serve it smooth or chunky depending on
+        your tastes.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>Meat</li>
-        <li>Onion and garlic</li>
-        <li>Tomato</li>
-        <li>Sugar</li>
-        <li>Spices and seasonings</li>
-        <li>Lasagna noodles</li>
-        <li>Cheese</li>
-        <li>Egg</li>
+        <li>Avocados</li>
+        <li>Lime</li>
+        <li>Salt</li>
+        <li>Vegetables</li>
+        <li>Herbs and spices</li>
+
     </ul>
 
     <h2>Steps</h2>
     <ol>
-        <li>Make the meat sauce</li>
-        <li>Cook the noodles</li>
-        <li>Make the ricotta mixture</li>
-        <li>Layer the lasagna according to the recipe instructions</li>
-        <li>Cover with foil and bake</li>
-        <li>Let the lasagna rest before serving</li>
+        <li>Mix all ingredients together!</li>
+        <li>Done!</li>
     </ol>
 </body>
 
