--- a/recipes/shrimp.html
+++ b/recipes/shrimp.html
@@ -12,29 +12,26 @@
 
     <h1>Coconut Shrimp</h1>
     <img
-        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Feaf2a87ca2376e9dca53110c86de9d30%2F167347559762620230110_193320.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
+        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8344516.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
     <h2>Description</h2>
-    <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+    <p>These coconut shrimp are rolled in a coconut beer batter before frying. Serve warm with your favorite dipping
+        sauce — I use orange marmalade, mustard, and horseradish mixed to taste for a dipping sauce.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>Meat</li>
-        <li>Onion and garlic</li>
-        <li>Tomato</li>
-        <li>Sugar</li>
-        <li>Spices and seasonings</li>
-        <li>Lasagna noodles</li>
-        <li>Cheese</li>
+        <li>All-purpose flour</li>
         <li>Egg</li>
+        <li>Beer</li>
+        <li>Baking powder</li>
+        <li>Shrimp</li>
+        <li><strong>Unsweetened</strong> coconut flakes</li>
+        <li>Cooking oil</li>
     </ul>
 
     <h2>Steps</h2>
     <ol>
-        <li>Make the meat sauce</li>
-        <li>Cook the noodles</li>
-        <li>Make the ricotta mixture</li>
-        <li>Layer the lasagna according to the recipe instructions</li>
-        <li>Cover with foil and bake</li>
-        <li>Let the lasagna rest before serving</li>
+        <li>Whisk some of the flour, the egg, beer and baking powder together.</li>
+        <li>Dredge the shrimp in flour, dip it in the beer batter, and roll in the coconut flakes.</li>
+        <li>Refrigerate the shrimp for half an hour, then fry the shrimp in hot oil until golden brown. </li>
     </ol>
 </body>
 
