Tried adding some CSS

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -5,6 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        * {
+            font-family: "Courier new";
+        }
+
+        body {
+            background-color: blanchedalmond;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 36px;
+        }
+
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+        }
+
+        .text {
+            font-size: 20px;
+        }
+
+        h2 {
+            font-size: 28px;
+        }
+    </style>
     <title>Guacamole</title>
 </head>
 
@@ -14,10 +43,11 @@
     <img
         src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Ff01a6bf647c432ca47e3977e74d19a34%2F1658799469F39A3812-D358-48B3-A09E-DF33F063FBAA.jpeg&q=60&c=sc&orient=true&poi=auto&h=512">
     <h2>Description</h2>
-    <p>This guacamole recipe gets a tasty kick from cayenne and cilantro. You can serve it smooth or chunky depending on
+    <p class="text">This guacamole recipe gets a tasty kick from cayenne and cilantro. You can serve it smooth or chunky
+        depending on
         your tastes.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="text">
         <li>Avocados</li>
         <li>Lime</li>
         <li>Salt</li>
@@ -27,7 +57,7 @@
     </ul>
 
     <h2>Steps</h2>
-    <ol>
+    <ol class="text">
         <li>Mix all ingredients together!</li>
         <li>Done!</li>
     </ol>
