--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
     <link rel="stylesheet" href="style.css">
+    <title>Odin Recipes</title>
 </head>
 
 <body>
 
-    <h1>World's Best Lasagna</h1>
-
+    <h1>Odin Recipes</h1>
+    <h2>TOP Recipes:</h2>
     <ul>
 
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/guacamole.html">Guacamole</a></li>
-        <li><a href="recipes/shrimp.html">Shrimp</a></li>
+        <li><a id=link href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a id=link href="recipes/guacamole.html">Guacamole</a></li>
+        <li><a id=link href="recipes/shrimp.html">Shrimp</a></li>
 
     </ul>
 </body>
