--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,18 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        * {
+            font-family: "Courier new";
+        }
+
+        body {
+            background-color: blanchedalmond;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 36px;
+        }
+
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+        }
+
+        .text {
+            font-size: 20px;
+        }
+
+        h2 {
+            font-size: 28px;
+        }
+    </style>>
     <title>World's Best Lasagna</title>
 </head>
 
 <body>
 
-    <h1>World's Best Lasagna</h1>
+    <h1 class="title">World's Best Lasagna</h1>
     <img
         src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Feaf2a87ca2376e9dca53110c86de9d30%2F167347559762620230110_193320.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
     <h2>Description</h2>
-    <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+    <p class="text">This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="text">
         <li>Meat</li>
         <li>Onion and garlic</li>
         <li>Tomato</li>
@@ -28,7 +57,7 @@
     </ul>
 
     <h2>Steps</h2>
-    <ol>
+    <ol class="text">
         <li>Make the meat sauce</li>
         <li>Cook the noodles</li>
         <li>Make the ricotta mixture</li>
