--- a/recipes/shrimp.html
+++ b/recipes/shrimp.html
@@ -5,30 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        * {
+            font-family: "Courier new";
+        }
+
+        body {
+            background-color: blanchedalmond;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 36px;
+        }
+
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+        }
+
+        .text {
+            font-size: 20px;
+        }
+
+        h2 {
+            font-size: 28px;
+        }
+    </style>
     <title>Coconut Shrimp</title>
 </head>
 
 <body>
 
-    <h1>Coconut Shrimp</h1>
+    <h1 class="title">Coconut Shrimp</h1>
     <img
         src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8344516.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
     <h2>Description</h2>
-    <p>These coconut shrimp are rolled in a coconut beer batter before frying. Serve warm with your favorite dipping
+    <p class="text">These coconut shrimp are rolled in a coconut beer batter before frying. Serve warm with your
+        favorite dipping
         sauce — I use orange marmalade, mustard, and horseradish mixed to taste for a dipping sauce.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="text">
         <li>All-purpose flour</li>
         <li>Egg</li>
         <li>Beer</li>
         <li>Baking powder</li>
         <li>Shrimp</li>
-        <li><strong>Unsweetened</strong> coconut flakes</li>
+        <li>Unsweetened coconut flakes</li>
         <li>Cooking oil</li>
     </ul>
 
     <h2>Steps</h2>
-    <ol>
+    <ol class="text">
         <li>Whisk some of the flour, the egg, beer and baking powder together.</li>
         <li>Dredge the shrimp in flour, dip it in the beer batter, and roll in the coconut flakes.</li>
         <li>Refrigerate the shrimp for half an hour, then fry the shrimp in hot oil until golden brown. </li>
