Working with borders

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
     <h1>Odin Recipes</h1>
     <h2>TOP Recipes:</h2>
-    <ul>
+    <div class="ul">
+        <ul>
 
-        <li><a id=link href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a id=link href="recipes/guacamole.html">Guacamole</a></li>
-        <li><a id=link href="recipes/shrimp.html">Shrimp</a></li>
+            <li><a id=link href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a id=link href="recipes/guacamole.html">Guacamole</a></li>
+            <li><a id=link href="recipes/shrimp.html">Shrimp</a></li>
 
-    </ul>
+        </ul>
+    </div>
 </body>
 
 </html>
