Added and styled back buttons

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="ul">
         <ul>
 
-            <li><a id=link href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a id=link href="recipes/guacamole.html">Guacamole</a></li>
-            <li><a id=link href="recipes/shrimp.html">Shrimp</a></li>
+            <li><a class=link href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a class=link href="recipes/guacamole.html">Guacamole</a></li>
+            <li><a class=link href="recipes/shrimp.html">Shrimp</a></li>
 
         </ul>
     </div>
